2007-05-02  Georg von Hippel <gmv22@cantab.net>

	* Added code to FeynML writer to combine dangling vertices and lines
	into external legs. Works only for diagrams where all internal
	vertices have been connected properly (unlike the Drell-Yan example)

2007-05-01  Georg von Hippel <gmv22@cantab.net>

	* Added support for free labels to FeynML module.

2007-05-01  Andy Buckley  <andy@insectnation.org>

	* Added 3D deformations to the SUSY and graviton lines. Again, they're
	time-consuming to render, but they look pretty.

	* Points are now drawn by definition after lines (well, there's a
	layer offset of 1000, which should be enough).

2007-04-26  Andy Buckley  <andy@insectnation.org>

	* Added silly example using multiple canvases and transparency.

	* Added a 3D version of the gluon line (can be time-consuming).

2007-04-25  Andy Buckley  <andy@insectnation.org>

	* Added frequency, amplitude and "extra (half) cycles" methods to
	decorated lines.

	* Now using copy when assigning a mark constant to a DecoratedPoint.

	* Cleaned up the code a bit based on output from pylint.

2007-04-24  Georg von Hippel <gmv22@cantab.net>

	* Repaired FeynML support broken by Andy's recent changes.

2007-04-24  Andy Buckley  <andy@insectnation.org>

	* Added graviton and SUSY lines - rather silly but hey...

2007-04-23  Andy Buckley  <andy@insectnation.org>

	* Added speculative MultiLine and test #5. Very alpha and ropey.

	* Replaced the NamedMark lookup with mark classes and module
	constants for the defaults. Might reinstate the size attr on the
	DecoratedPoint.

2007-04-03  Georg von Hippel <gmv22@cantab.net>

	* Added label support for blobs.
	* Further repairs to the FeynML module.

2007-03-28  Georg von Hippel <gmv22@cantab.net>

	* Started to repair the FeynML module
	* Fixed a bug in lines.py (never use == or != with None, use is/is not
	  instead).

2007-03-18  Andy Buckley  <andy@insectnation.org>

	* Added layer-based sorting of the object list before drawing, and